<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/versusFragment"
        android:title="@string/vs_title"
        android:icon="@drawable/ic_versus"
        app:showAsAction="always" />

    <item
        android:id="@+id/catsFragment"
        android:title="@string/cats_title"
        android:icon="@drawable/ic_cat"
        app:showAsAction="always" />

    <item
        android:id="@+id/dogsFragment"
        android:title="@string/dogs_title"
        android:icon="@drawable/ic_dog"
        app:showAsAction="always" />

    <item
        android:id="@+id/resultsFragment"
        android:title="@string/votes_title"
        android:icon="@drawable/ic_pie_chart"
        app:showAsAction="ifRoom"/>

</menu>